Chnged page footer gradient to 2way. Changed script ordering. Adjusted css class names to RF standards.

--- a/ui/layout/demo/src/main/webapp/index.xhtml
+++ b/ui/layout/demo/src/main/webapp/index.xhtml
@@ -45,7 +45,7 @@
     <h:form>
         <rich:tabPanel>
             <rich:tab>
-                <layout:layout>
+                <layout:layout styleClass="shadoww">
                     <layout:layoutPanel position="top" width="100%">
                         Grid top
                     </layout:layoutPanel>
