--- a/bootstrap/demo/src/main/webapp/component/breadcrumb/sample/divider.xhtml
+++ b/bootstrap/demo/src/main/webapp/component/breadcrumb/sample/divider.xhtml
@@ -4,7 +4,15 @@
 	xmlns:ez="http://java.sun.com/jsf/composite/status"
 	xmlns:b="http://richfaces.org/sandbox/bootstrap">
 
-	<b:breadcrumb>
+	<b:breadcrumb divider=">">
+		<h:link>Home</h:link>
+		<h:link>Library</h:link>
+		<h:outputText value="Data"/>
+	</b:breadcrumb>
+	
+	
+	
+	<b:breadcrumb divider="->">
 		<h:link>Home</h:link>
 		<h:link>Library</h:link>
 		<h:outputText value="Data"/>
