--- a/bootstrap/demo/src/main/webapp/component/breadcrumb/index.xhtml
+++ b/bootstrap/demo/src/main/webapp/component/breadcrumb/index.xhtml
@@ -26,6 +26,13 @@
 			<ui:param name="tag" value="breadcrumb" />
 			<ui:param name="sample" value="basic" />
 		</ui:include>
+		
+		<h2>Divider</h2>
+
+		<ui:include src="/resources/sample.xhtml">
+			<ui:param name="tag" value="breadcrumb" />
+			<ui:param name="sample" value="divider" />
+		</ui:include>
 
 
 	</ui:define>
