add severity attribute

--- a/bootstrap/ui/src/main/resources/META-INF/resources/bootstrap/less/hero-unit.less
+++ b/bootstrap/ui/src/main/resources/META-INF/resources/bootstrap/less/hero-unit.less
@@ -22,3 +22,22 @@
     color: @heroUnitLeadColor;
   }
 }
+
+// severity classes
+.hero-unit-success {
+  background-color: @successBackground;
+  color: @successText;
+}
+.hero-unit-danger,
+.hero-unit-error {
+  background-color: @errorBackground;
+  color: @errorText;
+}
+.hero-unit-info {
+  background-color: @infoBackground;
+  color: @infoText;
+}
+.hero-unit-warning {
+  background-color: @warningBackground;
+  color: @warningText;
+}
