--- a/bootstrap/demo/src/main/webapp/component/heroUnit/index.xhtml
+++ b/bootstrap/demo/src/main/webapp/component/heroUnit/index.xhtml
@@ -15,10 +15,18 @@
         <p>The <code>b:heroUnit</code> simple jumbotron-style component for calling extra attention to featured
             content or information.</p>
 
+        <h2>Basic usage</h2>
         <ui:include src="/resources/sample.xhtml">
             <ui:param name="tag" value="heroUnit"/>
             <ui:param name="sample" value="basic"/>
         </ui:include>
+        
+        <h2>Severity usage</h2>
+        <ui:include src="/resources/sample.xhtml">
+            <ui:param name="tag" value="heroUnit"/>
+            <ui:param name="sample" value="severity"/>
+        </ui:include>
+        
     </ui:define>
 </ui:composition>
 </html>	
