add icon usage example

--- a/bootstrap/demo/src/main/webapp/component/alert/index.xhtml
+++ b/bootstrap/demo/src/main/webapp/component/alert/index.xhtml
@@ -49,6 +49,13 @@
             <ui:param name="tag" value="alert" />
             <ui:param name="sample" value="inverse" />
         </ui:include>
+        
+        <h2>Icons</h2>
+
+        <ui:include src="/resources/sample.xhtml">
+            <ui:param name="tag" value="alert" />
+            <ui:param name="sample" value="icon" />
+        </ui:include>
 
     </ui:define>
 </ui:composition>
